--- a/pricing.html
+++ b/pricing.html
@@ -40,31 +40,12 @@
     gtag('js', new Date());
     gtag('config', 'G-1FRFWG4X18');
   </script>
-
-  <style>
-    /* Page-specific light touches */
-    .pricing-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
-    @media (max-width:900px){.pricing-grid{grid-template-columns:1fr 1fr}}
-    @media (max-width:560px){.pricing-grid{grid-template-columns:1fr}}
-    .card-top{display:flex;align-items:center;justify-content:space-between;margin-bottom:6px}
-    .badge{display:inline-flex;align-items:center;gap:6px;font-size:.8rem;border:1px solid var(--border);padding:4px 8px;border-radius:999px}
-    .badge .dot{width:8px;height:8px;border-radius:50%}
-    .badge.soon{background:rgba(184,115,51,.12)} /* copper tint */
-    .badge.soon .dot{background:#b87333}
-    .card-actions{display:flex;gap:10px;margin-top:10px;flex-wrap:wrap}
-
-    /* FAQ */
-    .faq{max-width:820px;margin:0 auto}
-    .faq details{background:var(--card);border:1px solid var(--border);border-radius:14px;margin:10px 0;padding:12px}
-    .faq summary{cursor:pointer;font-weight:600;outline:none}
-    .faq summary::-webkit-details-marker{display:none}
-    .faq .a{color:var(--muted);margin-top:8px}
-  </style>
 </head>
 
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
 
+  <!-- Header -->
   <header class="site-header">
     <div class="container">
       <a class="brand" href="/"><img src="/assets/img/logo.png" alt="System & Flow logo" /></a>
@@ -83,15 +64,17 @@
   <main id="main">
     <!-- Hero -->
     <section class="hero">
-      <div class="container">
+      <div class="container" style="text-align:center">
         <h1>Simple pricing.</h1>
-        <p class="small" style="max-width:720px">Start free. Upgrade when you’re ready. Cancel any time.</p>
+        <p class="small sub" style="max-width:720px;margin:0 auto">
+          Start free. Upgrade when you’re ready. Cancel any time.
+        </p>
       </div>
     </section>
 
-    <!-- Plans -->
+    <!-- Plans (reuse home-grid + card styles from styles.css) -->
     <section class="section">
-      <div class="container pricing-grid">
+      <div class="container home-grid">
         <article class="card">
           <h3>Free</h3>
           <p class="small">Transcript Analyzer + newsletter.</p>
@@ -137,52 +120,52 @@
       </div>
     </section>
 
-    <!-- FAQ -->
+    <!-- FAQ (uses global form/card styles so no inline CSS needed) -->
     <section class="section">
-      <div class="container faq">
-        <h2>Pricing FAQ</h2>
+      <div class="container" style="max-width:820px">
+        <h2 style="margin-top:0">Pricing FAQ</h2>
 
-        <details>
-          <summary>How does billing work?</summary>
-          <div class="a small">
+        <details class="form">
+          <summary><strong>How does billing work?</strong></summary>
+          <div class="small" style="margin-top:8px;color:var(--muted)">
             Pro and Suite will be monthly subscriptions billed at the start of each cycle. You can switch plans or cancel anytime
             from your account; changes take effect at the next renewal.
           </div>
         </details>
 
-        <details>
-          <summary>Do you offer refunds?</summary>
-          <div class="a small">
+        <details class="form">
+          <summary><strong>Do you offer refunds?</strong></summary>
+          <div class="small" style="margin-top:8px;color:var(--muted)">
             Yes — if something truly isn’t working for you, contact us within 14 days of purchase and we’ll make it right.
           </div>
         </details>
 
-        <details>
-          <summary>Team pricing or volume discounts?</summary>
-          <div class="a small">
+        <details class="form">
+          <summary><strong>Team pricing or volume discounts?</strong></summary>
+          <div class="small" style="margin-top:8px;color:var(--muted)">
             Yes. For 10+ seats, we offer tiered discounts and centralized billing. <a href="/contact.html">Contact us</a>
             with your team size and procurement requirements.
           </div>
         </details>
 
-        <details>
-          <summary>Do you support purchase orders (POs) or invoices?</summary>
-          <div class="a small">
+        <details class="form">
+          <summary><strong>Do you support purchase orders (POs) or invoices?</strong></summary>
+          <div class="small" style="margin-top:8px;color:var(--muted)">
             We support PO/invoice-based purchasing for approved organizations. <a href="/contact.html">Reach out</a> for vendor onboarding docs.
           </div>
         </details>
 
-        <details>
-          <summary>What’s included in the Free plan?</summary>
-          <div class="a small">
+        <details class="form">
+          <summary><strong>What’s included in the Free plan?</strong></summary>
+          <div class="small" style="margin-top:8px;color:var(--muted)">
             Transcript Analyzer, product updates, and access to select templates. You can upgrade anytime to unlock Status Report
             Generator, AI Prompt Pack, and (soon) Risk Radar.
           </div>
         </details>
 
-        <details>
-          <summary>Is my data secure?</summary>
-          <div class="a small">
+        <details class="form">
+          <summary><strong>Is my data secure?</strong></summary>
+          <div class="small" style="margin-top:8px;color:var(--muted)">
             Yes. We follow least-privilege principles, encrypted transport, and never sell your data. Enterprise security overview is
             available on request.
           </div>
@@ -191,48 +174,44 @@
     </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="container footer-grid">
-      <div>
-        <img class="footer-logo" src="/assets/img/logo.png" alt="System & Flow" />
-        <p class="small">Project management toolkits & AI prompts.</p>
+  <!-- Footer (compact, no Pinterest) -->
+  <footer class="footer-min">
+    <div class="container">
+      <div class="foot-left">
+        <img class="logo-icon" src="/assets/img/logo.png" alt="System &amp; Flow" />
+        <span class="brand">System &amp; Flow</span>
+        <span class="divider">•</span>
+        <span class="tagline">Project management toolkits &amp; AI prompts.</span>
       </div>
-      <nav aria-label="Footer">
-        <ul class="footer-nav">
-          <li><a href="/">Home</a></li>
-          <li><a href="/apps.html">Apps</a></li>
-          <li><a href="/pricing.html">Pricing</a></li>
-          <li><a href="/contact.html">Contact</a></li>
-          <li><a href="https://systemnflow.gumroad.com">Store</a></li>
-        </ul>
-      </nav>
-      <div class="social">
-        <a href="https://www.instagram.com/systemnflow" aria-label="Instagram">@systemnflow</a>
-        <a href="https://www.tiktok.com/@systemnflow" aria-label="TikTok">@systemnflow</a>
-        <a href="https://www.pinterest.com/systemnflow" aria-label="Pinterest">Pinterest</a>
-        <a href="https://www.youtube.com/@Systemnflow" aria-label="YouTube">YouTube</a>
-        <a href="https://www.linkedin.com/company/system-and-flow" aria-label="LinkedIn">LinkedIn</a>
+      <div class="foot-right">
+        <a href="/">Home</a>
+        <a href="/apps.html">Apps</a>
+        <a href="/pricing.html">Pricing</a>
+        <a href="/contact.html">Contact</a>
+        <a href="https://systemnflow.gumroad.com">Store</a>
+        <a href="https://www.youtube.com/@Systemnflow">YouTube</a>
+        <a href="https://www.linkedin.com/company/system-and-flow">LinkedIn</a>
       </div>
     </div>
-    <div class="container legal small">
-      © <span id="y"></span> System & Flow™. All rights reserved.
-    </div>
+    <div class="legal small">© <span id="y"></span> System &amp; Flow™. All rights reserved.</div>
   </footer>
 
+  <!-- Scripts -->
   <script>
     // year
     document.getElementById('y').textContent = new Date().getFullYear();
 
     // mobile nav
-    const btn = document.querySelector('.nav-toggle');
-    const nav = document.getElementById('nav');
-    if (btn && nav) {
+    (function () {
+      const btn = document.querySelector('.nav-toggle');
+      const nav = document.getElementById('nav');
+      if (!btn || !nav) return;
       btn.addEventListener('click', () => {
         const open = btn.getAttribute('aria-expanded') === 'true';
         btn.setAttribute('aria-expanded', String(!open));
         nav.classList.toggle('open');
       });
-    }
+    })();
   </script>
 </body>
 </html>
