--- a/thanks.html
+++ b/thanks.html
@@ -10,32 +10,38 @@
   <meta name="robots" content="noindex,follow" />
   <meta name="theme-color" content="#0b1220" />
 
-  <!-- Social -->
+  <!-- Open Graph / Twitter -->
+  <meta property="og:type" content="website" />
   <meta property="og:title" content="Thanks — You’re on the list! | System & Flow" />
   <meta property="og:description" content="We’ll be in touch soon with updates, tips, and specials." />
-  <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
   <meta property="og:url" content="https://systemnflow.com/thanks.html" />
-  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
   <meta name="twitter:card" content="summary_large_image" />
-
-  <!-- CSS -->
-  <link rel="preload" href="/styles.css" as="style" />
-  <link rel="stylesheet" href="/styles.css" />
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
-  <link rel="shortcut icon" href="/assets/img/favicon.ico">
   <link rel="manifest" href="/assets/img/site.webmanifest">
-  <link rel="mask-icon" href="/assets/img/safari-pinned-tab.svg" color="#0b1220">
-  <meta name="msapplication-TileColor" content="#0b1220">
-  <meta name="msapplication-config" content="/assets/img/browserconfig.xml">
+  <link rel="shortcut icon" href="/assets/img/favicon.ico">
+
+  <!-- CSS -->
+  <link rel="preload" href="/styles.css" as="style" />
+  <link rel="stylesheet" href="/styles.css" />
+
+  <!-- GA -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
+  <script>
+    window.dataLayer=window.dataLayer||[];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js',new Date());
+    gtag('config','G-1FRFWG4X18');
+  </script>
 
   <style>
     .t-wrap{max-width:820px;margin:0 auto;padding:70px 20px 40px;text-align:center}
-    .t-badge{display:inline-flex;align-items:center;justify-content:center;width:70px;height:70px;
-      border-radius:50%;background:#0f1f14;border:1px solid var(--border);color:#35d17a;font-size:32px}
+    .t-badge{display:inline-flex;align-items:center;justify-content:center;width:70px;height:70px;border-radius:50%;
+      background:#0f1f14;border:1px solid var(--border);color:#35d17a;font-size:32px}
     .t-title{font-size:clamp(26px,4vw,38px);margin:16px 0 8px}
     .t-sub{color:var(--muted);max-width:620px;margin:0 auto 18px}
     .t-actions{display:flex;gap:12px;flex-wrap:wrap;justify-content:center;margin-top:18px}
@@ -43,61 +49,74 @@
     .t-redirect{margin-top:16px;font-size:.9rem;color:var(--muted)}
   </style>
 </head>
-<body class="dark">
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
 
-  <!-- Header -->
-  <header class="wrap header">
-    <div class="brand">
-      <a href="/" aria-label="Go home" style="display:flex;align-items:center;gap:10px;text-decoration:none;">
-        <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" />
-        <span class="brand-name">System &amp; Flow</span>
-      </a>
+  <header class="site-header">
+    <div class="container">
+      <a class="brand" href="/"><img src="/assets/img/logo.png" alt="System & Flow logo" /></a>
+      <nav aria-label="Primary">
+        <button class="nav-toggle" aria-expanded="false" aria-controls="nav">Menu</button>
+        <ul id="nav" class="nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/apps.html">Apps</a></li>
+          <li><a href="/contact.html" class="button">Contact</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav class="nav">
-      <a href="/">Home</a>
-      <a href="/apps.html">Apps</a>
-      <a href="/contact.html">Contact</a>
-    </nav>
   </header>
 
-  <!-- Main -->
-  <main class="wrap t-wrap">
-    <div class="t-badge">✔</div>
-    <h1 class="t-title">Thanks — you’re on the list!</h1>
-    <p class="t-sub">We received your submission. Keep an eye on your inbox for updates, tips, and specials.</p>
-    <div class="t-actions">
-      <a class="btn primary" href="/apps.html">Explore Tools</a>
-      <a class="btn ghost" href="/">Back to Home</a>
-    </div>
-    <p class="t-note">No longer interested? You can unsubscribe with one click in any email.</p>
-    <p class="t-redirect">You’ll be redirected back to the homepage in a few seconds…</p>
+  <main id="main">
+    <section class="t-wrap">
+      <div class="t-badge" aria-hidden="true">✔</div>
+      <h1 class="t-title">Thanks — you’re on the list!</h1>
+      <p class="t-sub">We received your submission. Keep an eye on your inbox for updates, tips, and specials.</p>
+      <div class="t-actions" role="group" aria-label="Next steps">
+        <a class="button primary" href="/apps.html">Explore Tools</a>
+        <a class="button ghost" href="/">Back to Home</a>
+      </div>
+      <p class="t-note">No longer interested? You can unsubscribe with one click in any email.</p>
+      <p class="t-redirect">You’ll be redirected to the homepage in a few seconds…</p>
+    </section>
   </main>
 
-  <!-- Footer -->
   <footer class="footer-min">
-    <div class="foot-left">
-      <img src="/assets/img/logo.png" alt="System & Flow" class="logo-icon" />
-      <span class="brand">System &amp; Flow</span>
+    <div class="container">
+      <div class="foot-left">
+        <img class="logo-icon" src="/assets/img/logo.png" alt="System &amp; Flow" />
+        <span class="brand">System &amp; Flow</span>
+        <span class="divider">•</span>
+        <span class="tagline">Project management toolkits &amp; AI prompts.</span>
+      </div>
+      <div class="foot-right">
+        <a href="/privacy.html">Privacy</a>
+        <a href="/terms.html">Terms</a>
+        <span>© <span id="y"></span> System &amp; Flow™</span>
+      </div>
     </div>
-    <div class="foot-right">
-      <a href="/privacy.html">Privacy</a><span class="divider">|</span>
-      <a href="/terms.html">Terms</a><span class="divider">|</span>
-      <span>&copy; <span id="y"></span> System & Flow™</span>
-    </div>
+    <div class="legal small"></div>
   </footer>
 
   <script>
-    document.getElementById("y").textContent = new Date().getFullYear();
+    document.getElementById('y').textContent = new Date().getFullYear();
 
-    // Fire GA conversion event
+    // mobile nav
+    (function () {
+      const btn = document.querySelector('.nav-toggle');
+      const nav = document.getElementById('nav');
+      if (!btn || !nav) return;
+      btn.addEventListener('click', () => {
+        const open = btn.getAttribute('aria-expanded') === 'true';
+        btn.setAttribute('aria-expanded', String(!open));
+        nav.classList.toggle('open');
+      });
+    })();
+
+    // conversion + redirect
     if (typeof gtag === 'function') {
       gtag('event', 'conversion', { page: 'thanks' });
     }
-
-    // Auto-redirect after 5 seconds
-    setTimeout(() => {
-      window.location.href = "/";
-    }, 5000);
+    setTimeout(()=>{ window.location.href = "/"; }, 5000);
   </script>
 </body>
 </html>
