--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b1220" />
 
-  <!-- Open Graph / Twitter -->
+  <!-- Social -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Contact System & Flow | Built by PMs, for PMs" />
   <meta property="og:description" content="Get in touch about lightweight PM SaaS apps and AI prompts that cut through chaos and make execution simple." />
@@ -40,22 +40,6 @@
     gtag('js', new Date());
     gtag('config', 'G-1FRFWG4X18');
   </script>
-
-  <style>
-    /* Page-specific light touches to restore the panel + layout */
-    .form-wrap{max-width:680px;margin:0 auto}
-    .form.contact{
-      background:var(--panel);
-      border:1px solid var(--border);
-      border-radius:16px;
-      padding:18px;
-      display:grid;
-      gap:12px;
-    }
-    .form.contact .actions{display:flex;justify-content:flex-start}
-    .form.contact .consent{display:flex;align-items:center;gap:10px;color:var(--muted);font-size:14px}
-    #contact-success{max-width:680px;margin:12px auto 0;text-align:center}
-  </style>
 </head>
 
 <body>
@@ -81,7 +65,7 @@
     <section class="hero">
       <div class="container" style="text-align:center">
         <h1>Contact / Join the List</h1>
-        <p class="small sub" style="max-width:720px;margin:0 auto">
+        <p class="small sub">
           Built <strong>by project managers, for project managers.</strong> Ask us about SaaS app access, AI prompts, or early launch updates.
         </p>
       </div>
@@ -89,9 +73,9 @@
 
     <!-- Form -->
     <section class="section">
-      <div class="container form-wrap">
+      <div class="container">
         <form id="contact-form"
-              class="contact form"
+              class="form contact"
               action="https://formspree.io/f/mzzvlwqy"
               method="POST"
               novalidate
@@ -105,6 +89,7 @@
           <label class="small" for="message">Message</label>
           <textarea id="message" name="message" rows="5" placeholder="How can we help? (e.g., Transcript Analyzer, Status Report Generator, AI Prompt Pack)" required></textarea>
 
+          <!-- Original yellow reminder banner -->
           <div class="disclaimer-banner">
             ⚠️ <strong>Reminder:</strong> Do not include regulated, classified, or highly sensitive corporate data.
             You are responsible for complying with your organization’s policies.
@@ -264,6 +249,7 @@
         if (pendingForm) { pendingForm.requestSubmit(); pendingForm = null; }
       });
 
+      // helper
       window.__snf_reset_terms = () => localStorage.removeItem(STORAGE_KEY);
     })();
   </script>
