--- a/index.html
+++ b/index.html
@@ -3,34 +3,33 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <title>System & Flow — SaaS Apps & AI Prompts for Project Managers</title>
-  <meta name="description" content="Built by project managers, for project managers. Lightweight SaaS apps and AI prompts that cut through chaos and make execution simple." />
+  <title>System & Flow — Project Management Made Simple</title>
+  <meta name="description" content="Simplify project execution with lightweight SaaS tools and AI prompts built by PMs, for PMs. Avoid chaos. Move faster." />
   <link rel="canonical" href="https://systemnflow.com/" />
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b1220" />
   <meta name="google-site-verification" content="0ymp-CLDEvtP7eEedX-2OpObweOUFgGrU8-_ZMqKaVo" />
 
-  <!-- Open Graph / Twitter -->
+  <!-- Social -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="System & Flow — Project Management. Simplified." />
-  <meta property="og:description" content="Lightweight SaaS apps and AI prompts for PMs. Faster, smarter execution without the chaos." />
+  <meta property="og:title" content="System & Flow — Project Management Made Simple" />
+  <meta property="og:description" content="SaaS tools and AI for project managers. Get results faster with fewer headaches." />
   <meta property="og:url" content="https://systemnflow.com/" />
   <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="System & Flow — Project Management. Simplified." />
-  <meta name="twitter:description" content="Lightweight SaaS apps and AI prompts for PMs. Faster, smarter execution without the chaos." />
+  <meta name="twitter:title" content="System & Flow — Project Management Made Simple" />
+  <meta name="twitter:description" content="SaaS tools and AI for project managers. Get results faster with fewer headaches." />
   <meta name="twitter:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
 
-  <!-- JSON-LD (Organization) -->
+  <!-- Schema -->
   <script type="application/ld+json">
   {
-    "@context":"https://schema.org",
-    "@type":"Organization",
-    "name":"System & Flow",
-    "url":"https://systemnflow.com/",
-    "logo":"https://systemnflow.com/assets/img/logo.png",
-    "sameAs":[
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "System & Flow",
+    "url": "https://systemnflow.com/",
+    "logo": "https://systemnflow.com/assets/img/logo.png",
+    "sameAs": [
       "https://www.instagram.com/systemnflow",
       "https://www.tiktok.com/@systemnflow",
       "https://www.linkedin.com/company/system-and-flow"
@@ -58,7 +57,6 @@
     gtag('config', 'G-1FRFWG4X18');
   </script>
 </head>
-
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
 
@@ -71,8 +69,8 @@
       <nav aria-label="Primary">
         <button class="nav-toggle" aria-expanded="false" aria-controls="nav">Menu</button>
         <ul id="nav">
-          <li><a href="/" aria-current="page">Home</a></li>
-          <li><a href="/apps.html">Apps</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/apps.html">Tools</a></li>
           <li><a href="/contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -84,48 +82,45 @@
     <section class="hero">
       <div class="container">
         <img src="/assets/img/SNF_logo.png" alt="System & Flow full logo" class="logo-hero" width="300" height="300" loading="eager" decoding="async" />
-        <h1>Project Management.<br> Simplified.</h1>
+        <h1>Project Management.<br>Simplified.</h1>
         <p class="small">
-          Built <strong>by project managers, for project managers</strong> — System &amp; Flow delivers
-          lightweight SaaS apps and AI prompts that cut through chaos and make execution simple.
+          SaaS tools and AI prompts <strong>built by PMs</strong> to eliminate chaos, flag risks early, and speed up execution. Lightweight. Fast. Effective.
         </p>
 
-        <div class="cta-row" role="group" aria-label="Primary actions">
+        <div class="cta-row">
           <a class="button primary" href="/apps.html">Explore Tools</a>
-          <a class="button ghost" href="/contact.html">Join the List</a>
+          <a class="button ghost" href="/contact.html">Early Access List</a>
         </div>
 
-        <!-- Newsletter inline form -->
         <div class="newsletter-wrap">
-          <form id="newsletter-form" action="https://formspree.io/f/mzzvlwqy" method="POST" class="newsletter-form" aria-label="Join the newsletter">
+          <form id="newsletter-form" action="https://formspree.io/f/mzzvlwqy" method="POST" class="newsletter-form">
             <label class="sr-only" for="nl-email">Email</label>
-            <input id="nl-email" type="email" name="email" required placeholder="Email for specials &amp; updates" />
+            <input id="nl-email" type="email" name="email" required placeholder="Get product launches + PM tips" />
             <label>
               <input type="checkbox" name="marketing_consent" required aria-label="Consent to receive emails" />
               I agree to receive emails.
             </label>
             <button class="button primary" type="submit">Join</button>
-            <!-- Honeypot -->
             <input type="text" name="_gotcha" class="sr-only" tabindex="-1" autocomplete="off" aria-hidden="true" />
             <input type="hidden" name="_subject" value="Newsletter signup — systemnflow.com" />
           </form>
         </div>
         <div id="newsletter-success" class="success small" role="status" aria-live="polite">
-          ✅ Thanks for joining! Check your inbox soon.
+          ✅ You’re in. Launch alerts coming your way.
         </div>
       </div>
     </section>
 
-    <!-- Featured apps -->
+    <!-- Featured Apps -->
     <section class="section">
       <div class="container home-grid">
         <!-- Transcript Analyzer -->
         <article class="card">
           <div class="card-top">
-            <h3>Transcript Analyzer (Free)</h3>
-            <span class="badge live" aria-label="Live"><span class="dot" aria-hidden="true"></span>Live</span>
+            <h3>Transcript Analyzer</h3>
+            <span class="badge live"><span class="dot"></span>Live</span>
           </div>
-          <p class="small">Turn raw meeting notes into <strong>Actions, Risks, and Decisions</strong> in seconds.</p>
+          <p class="small">Auto-extract <strong>Actions, Risks, Decisions</strong> from raw meetings in seconds.</p>
           <div class="card-actions">
             <a class="button primary" href="/apps.html">Open</a>
             <a class="button ghost" href="/apps.html">Docs</a>
@@ -136,11 +131,11 @@
         <article class="card">
           <div class="card-top">
             <h3>Status Report Generator</h3>
-            <span class="badge soon" aria-label="Coming soon"><span class="dot" aria-hidden="true"></span>Coming&nbsp;Soon</span>
+            <span class="badge soon"><span class="dot"></span>Q4 2025</span>
           </div>
-          <p class="small">Create <strong>exec-ready one-pagers</strong> with instant export to PDF or Markdown.</p>
+          <p class="small">Get <strong>VP-ready summaries</strong> exported as PDF or Markdown in one click.</p>
           <div class="card-actions">
-            <a class="button ghost" href="/apps.html">Get Notified</a>
+            <a class="button ghost" href="/apps.html">Notify Me</a>
           </div>
         </article>
 
@@ -148,44 +143,40 @@
         <article class="card">
           <div class="card-top">
             <h3>Risk Radar</h3>
-            <span class="badge soon" aria-label="Coming soon"><span class="dot" aria-hidden="true"></span>Coming&nbsp;Soon</span>
+            <span class="badge soon"><span class="dot"></span>Coming Soon</span>
           </div>
-          <p class="small">Automatically flag top project risks — with <strong>AI-suggested mitigations</strong>.</p>
+          <p class="small">Auto-detect critical project risks — and get <strong>AI-backed mitigation tips</strong>.</p>
           <div class="card-actions">
-            <a class="button ghost" href="/apps.html">Get Notified</a>
+            <a class="button ghost" href="/apps.html">Notify Me</a>
           </div>
         </article>
       </div>
     </section>
   </main>
 
-  <!-- Compact footer -->
+  <!-- Footer -->
   <footer class="footer-min">
     <div class="container">
       <div class="foot-left">
-        <img class="logo-icon" src="/assets/img/logo.png" alt="System &amp; Flow" />
-        <span class="brand">System &amp; Flow</span>
-        <span class="divider">•</span>
-        <span class="tagline">Project management toolkits &amp; AI prompts.</span>
+        <img class="logo-icon" src="/assets/img/logo.png" alt="System & Flow" />
+        <span class="brand">System & Flow</span>
+        <span class="divider">&bull;</span>
+        <span class="tagline">Smarter tools. Faster PMs.</span>
       </div>
       <div class="foot-right">
-        <a href="/">Home</a>
-        <a href="/apps.html">Apps</a>
-        <a href="/contact.html">Contact</a>
-        <a href="https://www.youtube.com/@Systemnflow" rel="noopener">YouTube</a>
-        <a href="https://www.linkedin.com/company/system-and-flow" rel="noopener">LinkedIn</a>
+        <a href="https://www.tiktok.com/@systemnflow" aria-label="TikTok">TikTok</a>
+        <a href="https://www.instagram.com/systemnflow" aria-label="Instagram">Instagram</a>
+        <a href="https://www.pinterest.com/systemnflow" aria-label="Pinterest">Pinterest</a>
+        <a href="https://www.youtube.com/@Systemnflow" aria-label="YouTube">YouTube</a>
       </div>
     </div>
   </footer>
 
-  <div class="legal small">© <span id="y"></span> System &amp; Flow™. All rights reserved.</div>
+  <div class="legal small">© <span id="y"></span> System & Flow™. All rights reserved.</div>
 
   <!-- Scripts -->
   <script>
-    // year
     (function(){ var y=document.getElementById('y'); if(y) y.textContent=new Date().getFullYear(); })();
-
-    // mobile nav
     (function(){
       const btn=document.querySelector('.nav-toggle');
       const nav=document.getElementById('nav');
@@ -197,8 +188,6 @@
         });
       }
     })();
-
-    // newsletter AJAX
     (function(){
       const nf=document.getElementById('newsletter-form');
       const ok=document.getElementById('newsletter-success');
