--- a/index.html
+++ b/index.html
@@ -84,14 +84,12 @@
         <img src="/assets/img/SNF_logo.png" alt="System & Flow full logo" class="logo-hero" width="300" height="300" loading="eager" decoding="async" />
         <h1>Project Management.<br>Simplified.</h1>
         <p class="small">
-          SaaS tools and AI prompts <strong>built by PMs</strong> to eliminate chaos, flag risks early, and speed up execution. Lightweight. Fast. Effective.
+          SaaS tools and AI prompts <strong>built by PMs</strong> to eliminate chaos, flag risks early, and speed up execution.
         </p>
-
         <div class="cta-row">
           <a class="button primary" href="/apps.html">Explore Tools</a>
           <a class="button ghost" href="/contact.html">Early Access List</a>
         </div>
-
         <div class="newsletter-wrap">
           <form id="newsletter-form" action="https://formspree.io/f/mzzvlwqy" method="POST" class="newsletter-form">
             <label class="sr-only" for="nl-email">Email</label>
@@ -114,7 +112,6 @@
     <!-- Featured Apps -->
     <section class="section">
       <div class="container home-grid">
-        <!-- Transcript Analyzer -->
         <article class="card">
           <div class="card-top">
             <h3>Transcript Analyzer</h3>
@@ -127,7 +124,6 @@
           </div>
         </article>
 
-        <!-- Status Report Generator -->
         <article class="card">
           <div class="card-top">
             <h3>Status Report Generator</h3>
@@ -139,7 +135,6 @@
           </div>
         </article>
 
-        <!-- Risk Radar -->
         <article class="card">
           <div class="card-top">
             <h3>Risk Radar</h3>
@@ -171,7 +166,6 @@
       </div>
     </div>
   </footer>
-
   <div class="legal small">© <span id="y"></span> System & Flow™. All rights reserved.</div>
 
   <!-- Scripts -->
